# RPG-Sheet-automate

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/api/: main.py
app/api/v1/: routes.py
app/api/v1/routes/: __init__.py  character_rpg.py
app/schemas/: character_schema.py
app/services/: pdf_service.py
templates/OPRPG/: template_documentation.md
utils/: docker-compose.mongo.yml
utils/mongo/migrations/OPRPG/: 001_create_db_and_collection.py  002_insert_origens.py  003_insert_classe.py
